--- a/LCTMoodle/Plugin/ckeditor/contents.css
+++ b/LCTMoodle/Plugin/ckeditor/contents.css
@@ -36,6 +36,10 @@ html:hover:after {
     background-color: #08c;
 }
 
+html.loi:after {
+    background-color: #e00;
+}
+
 .cke_editable
 {
 	font-size: 13px;
