--- a/LCTMoodle/Views/ChuDe/_Form.cshtml
+++ b/LCTMoodle/Views/ChuDe/_Form.cshtml
@@ -36,7 +36,7 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input type="file" name="MaHinhDaiDien" data-thu-muc="AnhDaiDien_ChuDe/" />
+                            <input type="file" name="MaHinhDaiDien" data-thu-muc="HinhDaiDien_ChuDe" />
                         </article>
                     </section>
                 </li>
