--- a/LCTMoodle/Views/TrangChu/FormMau.cshtml
+++ b/LCTMoodle/Views/TrangChu/FormMau.cshtml
@@ -21,22 +21,19 @@
                 <li>
                     <section class="tieu-de">
                         <label>
-                            Editor:
+                            Editor
                         </label>
                     </section>
-                    <section class="noi-dung co-loi">
+                    <section class="noi-dung">
                         <section class="input">
-                            <textarea name="name" data-input-type="editor" data-mac-dinh="Mặc định (editor)" placeholder="Hãy nhập"></textarea>
-                        </section>
-                        <section class="loi">
-                            123asda ds asd
+                            <textarea data-validate="bat-buoc" name="name" data-input-type="editor" data-mac-dinh="Mặc định (editor)" placeholder="Hãy nhập"></textarea>
                         </section>
                     </section>
                 </li>
                 <li>
                     <section class="tieu-de">
                         <label>
-                            Select:
+                            Select
                         </label>
                     </section>
                     <section class="noi-dung">
@@ -47,7 +44,7 @@
                                 <option value="3">Option 3</option>
                             </select>
                         </section>
-                        <section class="loi">
+                        <section class="khung-loi">
                             123asda ds asd
                         </section>
                     </section>
@@ -58,7 +55,7 @@
                 <li>
                     <section class="tieu-de">
                         <label>
-                            Text:
+                            Text
                         </label>
                     </section>
                     <section class="noi-dung">
@@ -70,7 +67,7 @@
                 <li>
                     <section class="tieu-de">
                         <label>
-                            Text:
+                            Text
                         </label>
                     </section>
                     <section class="noi-dung">
@@ -83,7 +80,7 @@
                 <li>
                     <section class="tieu-de">
                         <label>
-                            Textarea:
+                            Textarea
                         </label>
                     </section>
                     <section class="noi-dung">
@@ -98,7 +95,7 @@
                 <li>
                     <section class="tieu-de">
                         <label>
-                            Text & Textarea:
+                            Text & Textarea
                         </label>
                     </section>
                     <section class="noi-dung">
@@ -111,7 +108,7 @@
                 <li>
                     <section class="tieu-de">
                         <label>
-                            Checkbox:
+                            Checkbox
                         </label>
                     </section>
                     <section class="noi-dung">
@@ -125,7 +122,7 @@
                 <li>
                     <section class="tieu-de">
                         <label>
-                            Radio:
+                            Radio
                         </label>
                     </section>
                     <section class="noi-dung">
@@ -138,19 +135,19 @@
                 <li>
                     <section class="tieu-de">
                         <label>
-                            Tập tin:
+                            Tập tin
                         </label>
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input type="file" name="name" value="" data-thu-muc="AnhDaiDien_ChuDe/" />
+                            <input type="file" name="name" value="" data-thu-muc="HinhDaiDien_ChuDe" />
                         </article>
                     </section>
                 </li>
                 <li>
                     <section class="tieu-de">
                         <label>
-                            Thời gian & lịch:
+                            Thời gian & lịch
                         </label>
                     </section>
                     <section class="noi-dung">
@@ -163,7 +160,7 @@
                 <li>
                     <section class="tieu-de">
                         <label>
-                            Thời gian:
+                            Thời gian
                         </label>
                     </section>
                     <section class="noi-dung">
@@ -175,7 +172,7 @@
                 <li>
                     <section class="tieu-de">
                         <label>
-                            Lịch:
+                            Lịch
                         </label>
                     </section>
                     <section class="noi-dung">
@@ -186,7 +183,7 @@
                 </li>
             </ul>
             <section class="lct-khung-button">
-                <button class="chap-nhan">
+                <button type="submit" class="chap-nhan">
                     Đăng
                 </button>
                 <button class="thong-tin">
