--- a/LCTMoodle/Views/NguoiDung/DangKy.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangKy.cshtml
@@ -15,7 +15,7 @@
         để được trải nghiệm các khoá học bổ ích        
     </section>
     <section class="noi-dung">
-        <form class="lct-form" action="/NguoiDung/XuLyThemNguoiDung" method="POST" id="TaoNguoiDung">
+        <form class="lct-form" action="/NguoiDung/XuLyThemNguoiDung" method="POST" id="them_nguoi_dung">
             <article>
                 <ul>
                     <li>
