--- a/LCTMoodle/Views/ChuDe/_Form.cshtml
+++ b/LCTMoodle/Views/ChuDe/_Form.cshtml
@@ -12,7 +12,7 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input type="text" name="Ten" placeholder="Nhập tên chủ đề..." />
+                            <input data-validate="bat-buoc" type="text" name="Ten" placeholder="Nhập tên chủ đề..." />
                         </article>
                     </section>
                 </li>
@@ -24,7 +24,7 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <textarea name="MoTa" placeholder="Nhập mô tả chủ đề..."></textarea>
+                            <textarea data-validate="bat-buoc" name="MoTa" placeholder="Nhập mô tả chủ đề..."></textarea>
                         </article>
                     </section>
                 </li>
@@ -36,7 +36,7 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input type="file" name="MaHinhDaiDien" data-thu-muc="HinhDaiDien_ChuDe" />
+                            <input data-validate="bat-buoc" type="file" name="MaHinhDaiDien" data-thu-muc="HinhDaiDien_ChuDe" />
                         </article>
                     </section>
                 </li>
