--- a/LCTMoodle/Views/TrangChu/FormMau.cshtml
+++ b/LCTMoodle/Views/TrangChu/FormMau.cshtml
@@ -21,6 +21,25 @@
                 <li>
                     <section class="tieu-de">
                         <label>
+                            Select
+                        </label>
+                    </section>
+                    <section class="noi-dung">
+                        <section class="input">
+                            <select name="select">
+                                <option value="1">Option 1</option>
+                                <option value="2">Option 2</option>
+                                <option value="3">Option 3</option>
+                            </select>
+                        </section>
+                        <section class="khung-loi">
+                            123asda ds asd
+                        </section>
+                    </section>
+                </li>
+                <li>
+                    <section class="tieu-de">
+                        <label>
                             Editor
                         </label>
                     </section>
