--- a/LCTMoodle/Views/TrangChu/FormMau.cshtml
+++ b/LCTMoodle/Views/TrangChu/FormMau.cshtml
@@ -32,9 +32,6 @@
                                 <option value="3">Option 3</option>
                             </select>
                         </section>
-                        <section class="khung-loi">
-                            123asda ds asd
-                        </section>
                     </section>
                 </li>
                 <li>
@@ -79,7 +76,7 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input type="text" name="name" data-mac-dinh="Mặc định (text)" placeholder="Hãy nhập..." />
+                            <input disabled="disabled" type="text" name="name" data-mac-dinh="Mặc định (text)" placeholder="Hãy nhập..." />
                         </article>
                     </section>
                 </li>
