--- a/LCTMoodle/Views/KhoaHoc/Tao.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Tao.cshtml
@@ -99,12 +99,11 @@
                     <section class="noi-dung">
                         <article class="input">
                             <input data-chuc-nang="tat-mo" data-mo="khoa-hoc-dang-ky" type="checkbox" name="name" value="" data-text="Khóa học đăng ký" />
-                            <input data-doi-tuong="khoa-hoc-dang-ky" type="checkbox" name="name" value="" data-text="Đăng ký có thời hạn" />
-                            <textarea data-doi-tuong="khoa-hoc-dang-ky" name="name" data-input-type="editor" data-mac-dinh="Mặc định (editor)" placeholder="Hãy nhập"></textarea>
+                            <input data-chuc-nang="tat-mo" data-mo="khoa-hoc-thoi-han-dang-ky" data-doi-tuong="khoa-hoc-dang-ky" type="checkbox" name="name" value="" data-text="Đăng ký có thời hạn" />
                         </article>
                     </section>
                 </li>
-                <li data-doi-tuong="khoa-hoc-dang-ky">
+                <li data-doi-tuong="khoa-hoc-thoi-han-dang-ky">
                     <section class="tieu-de">
                         <label>
                             Thời hạn đăng ký
