--- a/LCTMoodle/Views/ChuDe/_Form.cshtml
+++ b/LCTMoodle/Views/ChuDe/_Form.cshtml
@@ -1,5 +1,5 @@
 ﻿<article class="hop hop-2-vien">
-    <form id="tao_chu_de_form" action="/ChuDe/XuLyThemChuDe" method="post" class="noi-dung lct-form">
+    <form id="tao_chu_de_form" class="noi-dung lct-form">
         <input type="hidden" name="MaChuDeCha" value="@ViewData["MaChuDeCha"]" />
         <input type="hidden" name="PhamVi" value="@ViewData["PhamVi"]" />
         <article>
